<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/userAvatarImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_marginStart="10dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/userId"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/john"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userLastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/doe"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/john_doe_email"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </LinearLayout>

</LinearLayout>